src/objects/Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Trouser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T shirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TST-{000000}</displayFormat>
        <label>Test Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>